@@ -522,7 +522,7 @@ class Specification(ATFolder, ThemeTaggable,  ModalFieldEditableAware,
         convert = getToolByName(self, 'portal_transforms').convert
         text = convert('html_to_text', self.getDefinition()).getData()
         try:
-            text = text.decode('utf-8')
+            text = text.decode('utf-8', 'replace')
         except UnicodeDecodeError, err:
             logger.info(err)
         return text
